<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_profile_dialog_rounded"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:paddingStart="40dp"
    android:paddingEnd="40dp">

    <TextView
        android:id="@+id/TeksTentangAplikasi"
        style="@style/teksUbah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tentangAplikasi"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/TeksNamaAplikasi"
        style="@style/teksUbah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/TeksVersiAplikasi"
        style="@style/teksUbah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versiAplikasi"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnKonfirmasi"
            style="@style/btnKonfirmasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi"/>

    </LinearLayout>

</LinearLayout>