<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_profile_dialog_rounded"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/TeksBuatGrupBaru"
        style="@style/teksUbah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teksBuatGrupBaru"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/MasukkanBuatGrupBaru"
        style="@style/teksUbah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintBuatGrupBaru"
        android:textColorHint="@color/blackHint"
        android:importantForAutofill="no"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:backgroundTint="@color/black"/>

    <TextView
        android:id="@+id/CekGrupBaru"
        style="@style/teksUbah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnBatal"
            style="@style/btnBatal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/batal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnKonfirmasi"
            style="@style/btnKonfirmasi"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi"/>

    </LinearLayout>

</LinearLayout>