<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_profile_dialog_rounded"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/TeksKonfirmasiLogout"
        style="@style/teksUbah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teksKonfirmasiLogout"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnBatal"
            style="@style/btnBatal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/batal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BtnKonfirmasi"
            style="@style/btnKonfirmasi"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi"/>

    </LinearLayout>

</LinearLayout>