<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red_orange2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="40dp">

        <TextView
            android:id="@+id/TeksHaiNama"
            style="@style/home1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hai"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/TeksUsername"
            style="@style/home1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@+id/TeksHaiNama"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/TeksEmail"
            style="@style/home1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TeksHaiNama" />

        <View
            android:layout_width="50dp"
            android:layout_height="69dp"
            android:background="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/HomeContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_home_content_rounded"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="56dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/UbahUsername"
            style="@style/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubahUsername"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/UbahPassword"
            style="@style/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubahPasswordd"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Logout"
            style="@style/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/TentangAplikasi"
            style="@style/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tentangAplikasi"/>

    </LinearLayout>

</LinearLayout>