<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    android:paddingTop="325dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Email"
                    style="@style/home1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="51dp"/>

                <EditText
                    android:id="@+id/MasukkanEmail"
                    style="@style/home1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkanEmail"
                    android:textColorHint="@color/whiteHint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Password"
                    style="@style/home1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="12dp"/>

                <EditText
                    android:id="@+id/MasukkanPassword"
                    style="@style/home1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkanPassword"
                    android:textColorHint="@color/whiteHint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BtnLogin"
                style="@style/btnLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:id="@+id/TeksDaftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/BelumPunyaAkun"
                        style="@style/home1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/belumPunyaAkun"
                        android:textSize="18sp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/BtnDaftar"
                        style="@style/btnDaftar"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:text="@string/daftar"
                        android:layout_marginStart="-15dp"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BtnLupaPassword"
                    style="@style/btnDaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/lupaPassword"
                    android:layout_marginStart="-110dp"
                    app:layout_constraintTop_toBottomOf="@+id/TeksDaftar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <CheckBox
                    android:id="@+id/CheckboxTetapLogin"
                    style="@style/btnDaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/tetapLogin"
                    android:buttonTint="@color/white"
                    android:layout_marginStart="-110dp"
                    app:layout_constraintTop_toBottomOf="@+id/BtnLupaPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>